--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ body {
   padding: 10px 10px 10px 150px;
   opacity: 0;
   transform: translateY(0);
-  transition: transform 0.3s ease-in opacity 0.3s ease-in;
+  transition: transform 0.3s ease-in, opacity 0.3s ease-in;
   z-index: 0;
 }
 
